--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="app">
 			<div class="page intro">
 				<p class="darkT bigxl bold mont logo"><img src="img/logo.png" alt="logo" class="logo-img" />It is IT</p>
-				<p class="darkT mid pret logo-des">일산대진고 SW 동아리</p>
+				<p class="darkT mid pret logo-des">저현고등학교 정보공학연구소</p>
 			</div>
 			<div class="page duction">
 				<p class="darkT bigl bold mont">It is IT</p>
@@ -63,30 +63,30 @@
 			<div class="page portfolio">
 				<div class="port-img port1">
 					<div class="port">
-						<p class="port-title mont mid bold">전자출석체크</p>
+						<!-- <p class="port-title mont mid bold">전자출석체크</p>
 						<p class="port-content pret">간편한 출석체크 유틸리티</p>
-						<a alert="해당 페이지는 준비중입니다." class="port-link">View</a>
+						<a alert="해당 페이지는 준비중입니다." class="port-link">View</a> -->
 					</div>
 				</div>
 				<div class="port-img port2">
 					<div class="port">
-						<p class="port-title mont mid bold">Hometify</p>
+						<!-- <p class="port-title mont mid bold">Hometify</p>
 						<p class="port-content pret">새로운 도시문제 솔루션</p>
-						<a href="https://hometify.kr/" class="port-link">View</a>
+						<a href="https://hometify.kr/" class="port-link">View</a> -->
 					</div>
 				</div>
 				<div class="port-img port3">
 					<div class="port">
-						<p class="port-title mont mid bold">DAEJIN PAY</p>
+						<!-- <p class="port-title mont mid bold">DAEJIN PAY</p>
 						<p class="port-content pret">줄서지 않고 간편하게</p>
-						<a href="http://bbiyakyee7.com/daejinpay.html" class="port-link">View</a>
+						<a href="http://bbiyakyee7.com/daejinpay.html" class="port-link">View</a> -->
 					</div>
 				</div>
 				<div class="port-img port4">
 					<div class="port">
-						<p class="port-title mont mid bold">Play Us.</p>
+						<!-- <p class="port-title mont mid bold">Play Us.</p>
 						<p class="port-content pret">색다르게, 더욱 재미있게</p>
-						<a href="https://about-play-us.netlify.app/" class="port-link">View</a>
+						<a href="https://about-play-us.netlify.app/" class="port-link">View</a> -->
 					</div>
 				</div>
 			</div>
@@ -96,8 +96,8 @@
 			</div>
 			<div class="page contact darkB">
 				<p class="whiteT bigl bold mont tacen">Contact</p>
-				<a href="https://www.instagram.com/isdj_It is IT/" class="whiteT mid mont tacen"><i class="fa-brands fa-instagram"></i> @isdj_It is IT</a>
-				<p class="whiteT pret smls tacen">경기도 고양시 일산서구 대산로 246</p>
+				<a href="https://www.instagram.com/jeohyeon_itisit/" class="whiteT mid mont tacen"><i class="fa-brands fa-instagram"></i> @jeohyeon_itisit</a>
+				<p class="whiteT pret smls tacen">경기도 고양시 일산동구 위시티 3로 37</p>
 				<p class="whiteT pret smls tacen">Copyright &copy; by It is IT All Right Reserved</p>
 			</div>
 		</div>
