--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="page duction">
 				<p class="darkT bigl bold mont">It is IT</p>
 				<p class="darkT big bold mont">어떤 동아리 인가요?</p>
-				<p class="darkT mid pret tacen">설명<span class="bold mont">It is IT</span>동아리 설명</p>
+				<p class="darkT mid pret tacen">인공지능 모델 플랫폼과 프로그래밍 언어를 학습 및 활용하여 다양한 문제를 탐구 및 해결하는 동아리</p>
 			</div>
 			<div class="page curriculum">
 				<p class="darkT bigl bold mont tacen">It is IT에서는<br />무엇을 배우나요?</p>
