로고 누끼, 자바스크립트 수정

--- a/index.html
+++ b/index.html
@@ -4,23 +4,22 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
+		<link rel="shortcut icon" href="img/logo-removebg.png" type="image/x-icon" />
 		<title>It is IT</title>
 		<link rel="stylesheet" href="style.css" />
 		<script src="https://kit.fontawesome.com/e150fcae91.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
-		<div class="cursor"></div>
-
+		<!-- <div class="cursor"></div> -->
 		<div class="app">
 			<div class="page intro">
-				<p class="darkT bigxl bold mont logo"><img src="img/logo.png" alt="logo" class="logo-img" />It is IT</p>
+				<p class="darkT bigxl bold mont logo"><img src="img/logo-removebg.png" alt="logo" class="logo-img" />It is IT</p>
 				<p class="darkT mid pret logo-des">저현고등학교 정보공학연구소</p>
 			</div>
 			<div class="page duction">
 				<p class="darkT bigl bold mont">It is IT</p>
 				<p class="darkT big bold mont">어떤 동아리 인가요?</p>
-				<p class="darkT mid pret tacen">설명<span class="bold mont">It is IT</span>동아리 설명</p>
+				<p class="darkT mid pret tacen">명실상부 저현고등학교 최고의 IT 동아리<span class="bold mont">It is IT</span>는,<br />인공지능 모델 플랫폼과 프로그래밍 언어를 학습 및 활용하여 다양한 문제를 탐구 및 해결하는 동아리</p>
 			</div>
 			<div class="page curriculum">
 				<p class="darkT bigl bold mont tacen">It is IT에서는<br />무엇을 배우나요?</p>
@@ -92,7 +91,7 @@
 			</div>
 			<div class="page application">
 				<p class="darkT bigl bold mont tacen">지원은 어디서 하나요?</p>
-				<a href="https://admissionssw.netlify.app/" target="_blank" class="aplic-link mid bold pret">지원하러 가기</a>
+				<a href="https://forms.gle/" target="_blank" class="aplic-link mid bold pret">지원하러 가기</a>
 			</div>
 			<div class="page contact darkB">
 				<p class="whiteT bigl bold mont tacen">Contact</p>
