--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 		<script src="https://kit.fontawesome.com/e150fcae91.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
-		<!-- <div class="cursor"></div> -->
 		<div class="app">
 			<div class="page intro">
 				<p class="darkT bigxl bold mont logo"><img src="img/logo-removebg.png" alt="logo" class="logo-img" />It is IT</p>
@@ -19,52 +18,52 @@
 			<div class="page duction">
 				<p class="darkT bigl bold mont">It is IT</p>
 				<p class="darkT big bold mont">어떤 동아리 인가요?</p>
-				<p class="darkT mid pret tacen">명실상부 저현고등학교 최고의 IT 동아리<span class="bold mont">It is IT</span>는,<br />인공지능 모델 플랫폼과 프로그래밍 언어를 학습 및 활용하여 다양한 문제를 탐구 및 해결하는 동아리</p>
+				<p class="darkT mid pret tacen">명실상부 저현고등학교 최고의 IT 동아리 " <span class="bold mont">It is IT</span> " 는,<br />인공지능 모델 플랫폼과 프로그래밍 언어를 학습 및 활용하여 다양한 문제를 탐구 및 해결하는 동아리</p>
 			</div>
 			<div class="page curriculum">
 				<p class="darkT bigl bold mont tacen">It is IT에서는<br />무엇을 배우나요?</p>
 				<p class="darkT mid pret tacen">크게 아래 내용으로 진행 됩니다.</p>
 				<div class="curs">
 					<div class="cur">
-						<img src="img/1.png" alt="web" />
+						<img src="img/app.png" alt="web" />
 						<div>
-							<p class="darkT big bold mont"><span style="color: #f06529">WEB 기초</span></p>
-							<p class="darkT mid ligt pret">웹의 기초를 구성하는 HTML과 CSS,<br/>그리고 JS를 공부합니다.</p>
+							<p class="darkT big bold mont">App 개발</span></p>
+							<p class="darkT mid ligt pret">앱을 만들 수 있는 Android Studio, React를 배우고<br/>직접 개발합니다.</p>
 						</div>
 					</div>
 					<div class="cur">
-						<img src="img/2.png" alt="web" />
+						<img src="img/www.png" alt="web" />
 						<div>
-							<p class="darkT big bold mont"><span style="color: #F05138">App 기초</span></p>
-							<p class="darkT mid ligt pret">Swift와 안드로이드 스튜디오를 이용하여<br/>간단한 앱개발을 공부합니다.</p>
+							<p class="darkT big bold mont">WEB 개발</span></p>
+							<p class="darkT mid ligt pret">웹의 기본인 HTML과 CSS를 배우고<br/>Figma를 이용해 UI 디자인을 합니다.</p>
 						</div>
 					</div>
 					<div class="cur">
-						<img src="img/3.png" alt="web" />
+						<img src="img/unity.png" alt="web" />
 						<div>
-							<p class="darkT big bold mont"><span style="color: #333333">Figma</span></p>
-							<p class="darkT mid ligt pret">디자인 툴인 Figma를 이용하여<br/>사용자들의 UI/UX를 고려한 디자인을 배웁니다.</p>
-						</div>
+							<p class="darkT big bold mont">게임 개발</span></p>
+							<p class="darkT mid ligt pret">Unity를 배우고<br/>  </p>
+						</div>	
 					</div>
 					<div class="cur">
 						<img src="img/4.png" alt="web" />
 						<div>
-							<p class="darkT big bold mont"><span style="color: #000">정보보안</span></p>
+							<p class="darkT big bold mont">정보보안</span></p>
 							<p class="darkT mid ligt pret">웹하면 빠질 수 없는 서버 보안도<br />어떻게 구성해야 안전한기 배우게 됩니다.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="page portfolio-t">
-				<p class="darkT bigl bold mont tacen">It is IT는<br />어떤 프로젝트가 있나요?</p>
+				<p class="darkT bigl bold mont tacen">It is IT의<br />작년 활동이 궁금해요!</p>
 				<p class="darkT mid pret tacen">아래는 2023년 진행한 프로젝트입니다.</p>
 			</div>
 			<div class="page portfolio">
 				<div class="port-img port1">
 					<div class="port">
-						<!-- <p class="port-title mont mid bold">전자출석체크</p>
-						<p class="port-content pret">간편한 출석체크 유틸리티</p>
-						<a alert="해당 페이지는 준비중입니다." class="port-link">View</a> -->
+						<p class="port-title mont mid bold">Mango</p>
+						<p class="port-content pret">저현고등학교 웹사이트</p>
+						<a alert="해당 페이지는 준비중입니다." class="port-link">View</a>
 					</div>
 				</div>
 				<div class="port-img port2">
@@ -81,21 +80,61 @@
 						<a href="http://bbiyakyee7.com/daejinpay.html" class="port-link">View</a> -->
 					</div>
 				</div>
-				<div class="port-img port4">
+				<!-- <div class="port-img port4">
 					<div class="port">
-						<!-- <p class="port-title mont mid bold">Play Us.</p>
+						<p class="port-title mont mid bold">Play Us.</p>
 						<p class="port-content pret">색다르게, 더욱 재미있게</p>
-						<a href="https://about-play-us.netlify.app/" class="port-link">View</a> -->
+						<a href="https://about-play-us.netlify.app/" class="port-link">View</a>
+					</div>
+				</div> -->
+			</div>
+			<div class="page curriculum-t">
+				<p class="darkT bigl bold mont tacen">올해는 어떻게 진행하나요?</p>
+				<p class="darkT mid pret tacen">1학기 초에 간단한 프로젝트 탐색 활동 후 남은 차시 동안 "조별 프로젝트"를 진행합니다<br>총 10차시로 진행할 예정입니다.</p>
+			</div>
+			<div class="page curriculum">
+				<div class="curri-box-wrap">
+					<div class="curri-box">
+						<p class="darkT big bold mont tacen">1차시: OT</p><br>
+						<p class="darkT mid pret tacen">OT를 진행합니다.<br>
+							선후배의 이름을 외우고 친목을 도모할 수 있는 자리입니다.</p><br>
+					</div>
+					<div class="curri-box">
+						<p class="darkT big bold mont tacen">2차치: 활동 탐구 1</p><br>
+						<p class="darkT mid pret tacen">작년 게임 분야 개발팀이 어떤 프로젝트를 진행했는지 소개합니다.<br>
+							또한, 유니티로 아주 간단한 게임을 직접 만들어보는 활동을 진행합니다.</p><br>
+					</div>
+					<div class="curri-box">
+						<p class="darkT big bold mont tacen">3차시: 활동 탐구 2</p><br>
+						<p class="darkT mid pret tacen">작년 웹 개발, 데이터 분석 분야 팀이 진행한 프로젝트를 소개합니다.<br>
+							또, *활동 미정*</p><br>
+					</div>
+					<div class="curri-box">
+						<p class="darkT big bold mont tacen">4차시: 주제 찾기 & 조 짜기</p><br>
+						<p class="darkT mid pret tacen">1학기 동안 진행할 프로젝트의 주제를 모색합니다.<br>
+							같이 프로젝트를 진행할 팀원 또한 구합니다.</p><br>
+					</div>
+					<div class="curri-box">
+						<p class="darkT big bold mont tacen">5~6차시: 조 별 공부</p><br>
+						<p class="darkT mid pret tacen">각 조가 진행할 프로젝트와 관련된 심화 공부를 합니다.</p><br>
+					</div>
+					<div class="curri-box">
+						<p class="darkT big bold mont tacen">7~9차시: 프로젝트 활동</p><br>
+						<p class="darkT mid pret tacen">조 별로 프로젝트를 진행합니다.</p><br>
+					</div>
+					<div class="curri-box">
+						<p class="darkT big bold mont tacen">10차시: 지금까지 한 프로젝트를 부원들에게 소개하고, 학술제를 준비합니다.</p><br>
+						<p class="darkT mid pret tacen">다른 팀이 만든 프로젝트에 대해 알아보고 개선할 점에 대하여 이야기를 나눕니다.</p><br>
 					</div>
 				</div>
 			</div>
 			<div class="page application">
 				<p class="darkT bigl bold mont tacen">지원은 어디서 하나요?</p>
-				<a href="https://forms.gle/" target="_blank" class="aplic-link mid bold pret">지원하러 가기</a>
+				<a href="https://forms.gle/czXNwXs6anGpLDTcA" target="_blank" class="aplic-link mid bold pret">지원하러 가기</a>
 			</div>
 			<div class="page contact darkB">
 				<p class="whiteT bigl bold mont tacen">Contact</p>
-				<a href="https://www.instagram.com/jeohyeon_itisit/" class="whiteT mid mont tacen"><i class="fa-brands fa-instagram"></i> @jeohyeon_itisit</a>
+				<a href="https://www.instagram.com/jeohyeon_itisit/" class="whiteT mid mont tacen"><i class="fa-brands fa-instagram"></i>@jeohyeon_itisit</a>
 				<p class="whiteT pret smls tacen">경기도 고양시 일산동구 위시티 3로 37</p>
 				<p class="whiteT pret smls tacen">Copyright &copy; by It is IT All Right Reserved</p>
 			</div>
@@ -105,6 +144,8 @@
 		<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 		<script src="main.js"></script>
 		<script>
+			// 로고 애니메이션 추가
+
 			window.sr = ScrollReveal({ reset: true });
 
 			// sr.reveal(".page1", {
