--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 						<img src="img/unity.png" alt="web" />
 						<div>
 							<p class="darkT big bold mont">게임 개발</span></p>
-							<p class="darkT mid ligt pret">Unity를 배우고<br/>  </p>
+							<p class="darkT mid ligt pret">Unity를 배우고 스토리 구상으로<br/>동아리 오리지널 게임을 개발합니다.</p>
 						</div>	
 					</div>
 					<div class="cur">
-						<img src="img/4.png" alt="web" />
+						<img src="img/data.png" alt="web" />
 						<div>
-							<p class="darkT big bold mont">정보보안</span></p>
-							<p class="darkT mid ligt pret">웹하면 빠질 수 없는 서버 보안도<br />어떻게 구성해야 안전한기 배우게 됩니다.</p>
+							<p class="darkT big bold mont">데이터 분석</span></p>
+							<p class="darkT mid ligt pret">흥미로운 주제의 다양한 데이터들을 모아<br/>데이터 시각화 및 분석을 합니다.</p>
 						</div>
 					</div>
 				</div>
@@ -63,30 +63,17 @@
 					<div class="port">
 						<p class="port-title mont mid bold">Mango</p>
 						<p class="port-content pret">저현고등학교 웹사이트</p>
-						<a alert="해당 페이지는 준비중입니다." class="port-link">View</a>
+						<a class="port-link" onclick="alert('해당 페이지는 준비 중 입니다.');">View</a>
 					</div>
 				</div>
 				<div class="port-img port2">
 					<div class="port">
-						<!-- <p class="port-title mont mid bold">Hometify</p>
-						<p class="port-content pret">새로운 도시문제 솔루션</p>
-						<a href="https://hometify.kr/" class="port-link">View</a> -->
 					</div>
 				</div>
 				<div class="port-img port3">
 					<div class="port">
-						<!-- <p class="port-title mont mid bold">DAEJIN PAY</p>
-						<p class="port-content pret">줄서지 않고 간편하게</p>
-						<a href="http://bbiyakyee7.com/daejinpay.html" class="port-link">View</a> -->
 					</div>
 				</div>
-				<!-- <div class="port-img port4">
-					<div class="port">
-						<p class="port-title mont mid bold">Play Us.</p>
-						<p class="port-content pret">색다르게, 더욱 재미있게</p>
-						<a href="https://about-play-us.netlify.app/" class="port-link">View</a>
-					</div>
-				</div> -->
 			</div>
 			<div class="page curriculum-t">
 				<p class="darkT bigl bold mont tacen">올해는 어떻게 진행하나요?</p>
