--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 			<div class="page intro">
 				<p class="darkT bigxl bold mont logo"><img src="img/logo-removebg.png" alt="logo" class="logo-img" />It is IT</p>
 				<p class="darkT mid pret logo-des">저현고등학교 정보공학연구소</p>
+				<a class="darkT mid pret logo-des">신청 바로가기</a>
 			</div>
 			<div class="page duction">
 				<p class="darkT bigl bold mont">It is IT</p>
 				<p class="darkT big bold mont">어떤 동아리 인가요?</p>
-				<p class="darkT mid pret tacen">명실상부 저현고등학교 최고의 IT 동아리 " <span class="bold mont">It is IT</span> " 는,<br />인공지능 모델 플랫폼과 프로그래밍 언어를 학습 및 활용하여 다양한 문제를 탐구 및 해결하는 동아리</p>
+				<p class="darkT mid pret tacen">명실상부 저현고등학교 최고의 IT 동아리 " <span class="bold mont">It is IT</span> " 는<br />인공지능 모델 플랫폼과 프로그래밍 언어를 학습 및 활용하여 다양한 문제를 탐구 및 해결하는 동아리입니다</p>
 			</div>
-			<div class="page curriculum">
+			<div class="page curriculum1">
 				<p class="darkT bigl bold mont tacen">It is IT에서는<br />무엇을 배우나요?</p>
 				<p class="darkT mid pret tacen">크게 아래 내용으로 진행 됩니다.</p>
 				<div class="curs">
