--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 		<script src="https://kit.fontawesome.com/e150fcae91.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
+		<!-- <div class="rotate-plz" style="visibility: hidden;">
+			<img src="img/rotate-screen.png">
+			<p>화면을 돌려주세요!</p>
+		</div> -->
 		<div class="app">
 			<div class="page intro">
 				<p class="darkT bigxl bold mont logo"><img src="img/logo-removebg.png" alt="logo" class="logo-img" />It is IT</p>
 				<p class="darkT mid pret logo-des">저현고등학교 정보공학연구소</p>
-				<a class="darkT mid pret logo-des">신청 바로가기</a>
+				<a href="#apply" class="darkT mid pret logo-des">신청 바로가기</a>
 			</div>
 			<div class="page duction">
 				<p class="darkT bigl bold mont">It is IT</p>
@@ -116,15 +120,18 @@
 					</div>
 				</div>
 			</div>
-			<div class="page application">
+			<div class="page application" id="apply">
 				<p class="darkT bigl bold mont tacen">지원은 어디서 하나요?</p>
 				<a href="https://forms.gle/czXNwXs6anGpLDTcA" target="_blank" class="aplic-link mid bold pret">지원하러 가기</a>
 			</div>
 			<div class="page contact darkB">
 				<p class="whiteT bigl bold mont tacen">Contact</p>
-				<a href="https://www.instagram.com/jeohyeon_itisit/" class="whiteT mid mont tacen"><i class="fa-brands fa-instagram"></i>@jeohyeon_itisit</a>
+				<a href="https://www.instagram.com/jeohyeon_itisit/" class="whiteT mid mont tacen"><i class="fa-brands fa-instagram"></i> @jeohyeon_itisit</a>
 				<p class="whiteT pret smls tacen">경기도 고양시 일산동구 위시티 3로 37</p>
 				<p class="whiteT pret smls tacen">Copyright &copy; by It is IT All Right Reserved</p>
+			</div>
+			<div class="contact darkB">
+				<p class="whiteT pret smls tacen" style="font-size: 7px;text-align: left;">이 웹사이트의 아이콘 중 일부는 <a href="https://icons8.com/">icons8.com</a> 에서 가져왔습니다.</p>
 			</div>
 		</div>
 
