--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 		<script src="https://kit.fontawesome.com/e150fcae91.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
-		<!-- <div class="rotate-plz" style="visibility: hidden;">
+		<div class="rotate-plz" style="visibility: hidden;">
 			<img src="img/rotate-screen.png">
 			<p>화면을 돌려주세요!</p>
-		</div> -->
+		</div>
 		<div class="app">
 			<div class="page intro">
 				<p class="darkT bigxl bold mont logo"><img src="img/logo-removebg.png" alt="logo" class="logo-img" />It is IT</p>
