--- a/index.html
+++ b/index.html
@@ -23,44 +23,44 @@
 			<div class="page duction">
 				<p class="darkT bigl bold mont">It is IT</p>
 				<p class="darkT big bold mont">어떤 동아리 인가요?</p>
-				<p class="darkT mid pret tacen">명실상부 저현고등학교 최고의 IT 동아리 " <span class="bold mont">It is IT</span> " 는<br />인공지능 모델 플랫폼과 프로그래밍 언어를 학습 및 활용하여 다양한 문제를 탐구 및 해결하는 동아리입니다</p>
+				<p class="darkT mid pret tacen">명실상부 저현고등학교 최고의 IT 동아리 " <span class="bold mont">It is IT</span> " 는<br>인공지능 모델 플랫폼과 프로그래밍 언어를 학습 및 활용하여<br>다양한 문제를 탐구 및 해결하는 동아리입니다</p>
 			</div>
 			<div class="page curriculum1">
-				<p class="darkT bigl bold mont tacen">It is IT에서는<br />무엇을 배우나요?</p>
+				<p class="darkT bigl bold mont tacen">It is IT에서는<br>무엇을 배우나요?</p>
 				<p class="darkT mid pret tacen">크게 아래 내용으로 진행 됩니다.</p>
 				<div class="curs">
 					<div class="cur">
 						<img src="img/app.png" alt="web" />
 						<div>
 							<p class="darkT big bold mont">App 개발</span></p>
-							<p class="darkT mid ligt pret">앱을 만들 수 있는 Android Studio, React를 배우고<br/>직접 개발합니다.</p>
+							<p class="darkT mid ligt pret">앱을 만들 수 있는 Android Studio, React를 배우고<br>직접 개발합니다.</p>
 						</div>
 					</div>
 					<div class="cur">
 						<img src="img/www.png" alt="web" />
 						<div>
 							<p class="darkT big bold mont">WEB 개발</span></p>
-							<p class="darkT mid ligt pret">웹의 기본인 HTML과 CSS를 배우고<br/>Figma를 이용해 UI 디자인을 합니다.</p>
+							<p class="darkT mid ligt pret">웹의 기본인 HTML과 CSS를 배우고<br>Figma를 이용해 UI 디자인을 합니다.</p>
 						</div>
 					</div>
 					<div class="cur">
 						<img src="img/unity.png" alt="web" />
 						<div>
 							<p class="darkT big bold mont">게임 개발</span></p>
-							<p class="darkT mid ligt pret">Unity를 배우고 스토리 구상으로<br/>동아리 오리지널 게임을 개발합니다.</p>
+							<p class="darkT mid ligt pret">Unity를 배우고 스토리 구상으로<br>동아리 오리지널 게임을 개발합니다.</p>
 						</div>	
 					</div>
 					<div class="cur">
 						<img src="img/data.png" alt="web" />
 						<div>
 							<p class="darkT big bold mont">데이터 분석</span></p>
-							<p class="darkT mid ligt pret">흥미로운 주제의 다양한 데이터들을 모아<br/>데이터 시각화 및 분석을 합니다.</p>
+							<p class="darkT mid ligt pret">흥미로운 주제의 다양한 데이터들을 모아<br>데이터 시각화 및 분석을 합니다.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="page portfolio-t">
-				<p class="darkT bigl bold mont tacen">It is IT의<br />작년 활동이 궁금해요!</p>
+				<p class="darkT bigl bold mont tacen">It is IT의<br>작년 활동이 궁금해요!</p>
 				<p class="darkT mid pret tacen">아래는 2023년 진행한 프로젝트입니다.</p>
 			</div>
 			<div class="page portfolio">
@@ -82,41 +82,41 @@
 			</div>
 			<div class="page curriculum-t">
 				<p class="darkT bigl bold mont tacen">올해는 어떻게 진행하나요?</p>
-				<p class="darkT mid pret tacen">1학기 초에 간단한 프로젝트 탐색 활동 후 남은 차시 동안 "조별 프로젝트"를 진행합니다<br>총 10차시로 진행할 예정입니다.</p>
+				<p class="darkT mid pret tacen">1학기 초에 간단한 프로젝트 탐색 활동 후<br>남은 차시 동안 "조별 프로젝트"를 진행합니다<br><br>총 10차시로 진행할 예정입니다.</p>
 			</div>
 			<div class="page curriculum">
 				<div class="curri-box-wrap">
 					<div class="curri-box">
-						<p class="darkT big bold mont tacen">1차시: OT</p><br>
-						<p class="darkT mid pret tacen">OT를 진행합니다.<br>
-							선후배의 이름을 외우고 친목을 도모할 수 있는 자리입니다.</p><br>
+						<p class="darkT mid bold mont tacen">1차시: OT</p><br>
+						<h4 class="darkT smls pret tacen">OT를 진행합니다.<br><br>
+							선후배의 이름을 외우고 친목을 도모할 수 있는 자리입니다.</h4><br>
 					</div>
 					<div class="curri-box">
-						<p class="darkT big bold mont tacen">2차치: 활동 탐구 1</p><br>
-						<p class="darkT mid pret tacen">작년 게임 분야 개발팀이 어떤 프로젝트를 진행했는지 소개합니다.<br>
-							또한, 유니티로 아주 간단한 게임을 직접 만들어보는 활동을 진행합니다.</p><br>
+						<p class="darkT mid bold mont tacen">2차치: 활동 탐구 1</p><br>
+						<h4 class="darkT smls pret tacen">작년 게임 분야 개발팀이 어떤 프로젝트를 진행했는지 소개합니다.<br>
+							또한, 유니티로 아주 간단한 게임을 직접 만들어보는 활동을 진행합니다.</h4><br>
 					</div>
 					<div class="curri-box">
-						<p class="darkT big bold mont tacen">3차시: 활동 탐구 2</p><br>
-						<p class="darkT mid pret tacen">작년 웹 개발, 데이터 분석 분야 팀이 진행한 프로젝트를 소개합니다.<br>
-							또, *활동 미정*</p><br>
+						<p class="darkT mid bold mont tacen">3차시: 활동 탐구 2</p><br>
+						<h4 class="darkT smls pret tacen">작년 웹 개발, 데이터 분석 분야 팀이 진행한 프로젝트를 소개합니다.<br>
+							또한, Square space를 이용한 간단한 웹페이지 만들기와 영화 평점 데이터 분석을 체험합니다.</h4><br>
 					</div>
 					<div class="curri-box">
-						<p class="darkT big bold mont tacen">4차시: 주제 찾기 & 조 짜기</p><br>
-						<p class="darkT mid pret tacen">1학기 동안 진행할 프로젝트의 주제를 모색합니다.<br>
-							같이 프로젝트를 진행할 팀원 또한 구합니다.</p><br>
+						<p class="darkT mid bold mont tacen">4차시: 주제 찾기 & 조 짜기</p><br>
+						<h4 class="darkT smls pret tacen">1학기 동안 진행할 프로젝트의 주제를 모색합니다.<br>
+							같이 프로젝트를 진행할 팀원 또한 구합니다.</h4><br>
 					</div>
 					<div class="curri-box">
-						<p class="darkT big bold mont tacen">5~6차시: 조 별 공부</p><br>
-						<p class="darkT mid pret tacen">각 조가 진행할 프로젝트와 관련된 심화 공부를 합니다.</p><br>
+						<p class="darkT mid bold mont tacen">5~6차시: 조 별 공부</p><br>
+						<h4 class="darkT smls pret tacen">각 조가 진행할 프로젝트와 관련된 심화 공부를 합니다.</h4><br>
 					</div>
 					<div class="curri-box">
-						<p class="darkT big bold mont tacen">7~9차시: 프로젝트 활동</p><br>
-						<p class="darkT mid pret tacen">조 별로 프로젝트를 진행합니다.</p><br>
+						<p class="darkT mid bold mont tacen">7~9차시: 프로젝트 활동</p><br>
+						<h4 class="darkT smls pret tacen">조 별로 프로젝트를 진행합니다.</h4><br>
 					</div>
 					<div class="curri-box">
-						<p class="darkT big bold mont tacen">10차시: 지금까지 한 프로젝트를 부원들에게 소개하고, 학술제를 준비합니다.</p><br>
-						<p class="darkT mid pret tacen">다른 팀이 만든 프로젝트에 대해 알아보고 개선할 점에 대하여 이야기를 나눕니다.</p><br>
+						<p class="darkT mid bold mont tacen">10차시: 프로젝트 소개 & 학술제 준비</p><br>
+						<h4 class="darkT smls pret tacen">다른 팀이 만든 프로젝트에 대해 알아보고 개선할 점에 대하여 이야기를 나눕니다.</h4><br>
 					</div>
 				</div>
 			</div>
