--- a/index.html
+++ b/index.html
@@ -1,197 +1,215 @@
 <!DOCTYPE html>
 <html lang="ko">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="shortcut icon" href="img/logo-removebg.png" type="image/x-icon" />
 
-		<!-- open graph meta -->
-		<meta property="og:url" content="https://itisit.or.kr" />
-		<meta property="og:type" content="website" />
-		<meta property="og:title" content="It is IT (정보공학연구소)" />
-		<meta property="og:description" content="저현고등학교 동아리 It is IT의 홈페이지 입니다." />
-		<meta property="og:image" content="img/logo-removebg.png" />
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="shortcut icon" href="img/logo-removebg.png" type="image/x-icon" />
 
-		<!-- 맨 밑에 아이콘 (인스타, 전화) -->
-		<script src="https://kit.fontawesome.com/e150fcae91.js" crossorigin="anonymous"></script>
+	<!-- open graph meta -->
+	<meta property="og:url" content="https://itisit.or.kr" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="It is IT (정보공학연구소)" />
+	<meta property="og:description" content="저현고등학교 동아리 It is IT의 홈페이지 입니다." />
+	<meta property="og:image" content="img/logo-removebg.png" />
 
-		<title>It is IT</title>
-		<link rel="stylesheet" href="style.css" />
-	</head>
-	<body>
-		<div class="app">
-			<div class="page intro">
-				<p class="darkT bigxl bold mont logo"><img src="img/logo-removebg.png" alt="logo" class="logo-img" />It is IT</p>
-				<p class="darkT big pret logo-des">저현고등학교 정보공학연구소</p>
-				<a href="#apply" id="apply-button" class="darkT mid pret logo-des aplic-link">신청 바로가기</a>
+	<!-- 맨 밑에 아이콘 (인스타, 전화) -->
+	<script src="https://kit.fontawesome.com/e150fcae91.js" crossorigin="anonymous"></script>
+
+	<title>It is IT</title>
+	<link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+	<div class="app">
+		<div class="page intro">
+			<p class="darkT bigxl bold mont logo"><img src="img/logo-removebg.png" alt="logo" class="logo-img" />It is
+				IT</p>
+			<p class="darkT big pret logo-des">저현고등학교 정보공학연구소</p>
+			<a href="#apply" id="apply-button" class="darkT mid pret logo-des aplic-link">신청 바로가기</a>
+		</div>
+		<div class="page duction">
+			<p class="darkT bigl bold mont">It is IT</p>
+			<p class="darkT big bold mont">어떤 동아리 인가요?</p>
+			<p class="darkT mid pret tacen">명실상부 저현고등학교 최고의 IT 동아리 " <span class="bold mont">It is IT</span> " 는<br>인공지능
+				모델 플랫폼과 프로그래밍 언어를 학습 및 활용하여<br>다양한 문제를 탐구 및 해결하는 동아리입니다</p>
+		</div>
+		<div class="page">
+			<div class="PR-title" style="width: 100%; display: flex; flex-direction: row;">
+				<p class="PR1 big mont">동아리</p>
+				<p class="darkT bigl bold mont">'자랑'</p>
+				<p class="PR2 big mont">이라면</p>
 			</div>
-			<div class="page duction">
-				<p class="darkT bigl bold mont">It is IT</p>
-				<p class="darkT big bold mont">어떤 동아리 인가요?</p>
-				<p class="darkT mid pret tacen">명실상부 저현고등학교 최고의 IT 동아리 " <span class="bold mont">It is IT</span> " 는<br>인공지능 모델 플랫폼과 프로그래밍 언어를 학습 및 활용하여<br>다양한 문제를 탐구 및 해결하는 동아리입니다</p>
-			</div>
-			<div class="page">
-				<p class="darkT bigl bold mont">동아리 자랑좀 하겠습니다~</p>
-				<p class="darkT big regu mont">
-					- &lt;2년 연속 저현고등학교 우수 동아리 선정&gt;<br>
-					- &lt;교내 유일 컴퓨터실 독점&gt;<br>
-					- &lt;삼성 주니어 SW 아카데미 2년 연속 발탁&gt;<br>
-					- &lt;Microsoft Azure Empowerment Project 선정&gt;<br>
-					- &lt;비버 챌린지 시행 및 운영진 참여&gt;<br>
-					- &lt;저현고등학교 최대 크기 및 유일 순수 공학 동아리&gt;
-				</p>
-			</div>
-			<div class="page curriculum1">
-				<p class="darkT bigl bold mont tacen">It is IT에서는<br>무엇을 배우나요?</p>
-				<p class="darkT mid pret tacen">크게 아래 내용으로 진행 됩니다.</p>
-				<div class="curs">
-					<div class="cur">
-						<img src="img/app.png" alt="web" />
-						<div>
-							<p class="darkT big bold mont">App 개발</span></p>
-							<p class="darkT mid ligt pret">앱을 만들 수 있는 Android Studio, React를 배우고<br>직접 개발합니다.</p>
-						</div>
-					</div>
-					<div class="cur">
-						<img src="img/www.png" alt="web" />
-						<div>
-							<p class="darkT big bold mont">WEB 개발</span></p>
-							<p class="darkT mid ligt pret">웹의 기본인 HTML과 CSS를 배우고<br>Figma를 이용해 UI 디자인을 합니다.</p>
-						</div>
-					</div>
-					<div class="cur">
-						<img src="img/unity.png" alt="web" />
-						<div>
-							<p class="darkT big bold mont">게임 개발</span></p>
-							<p class="darkT mid ligt pret">Unity를 배우고 스토리 구상으로<br>동아리 오리지널 게임을 개발합니다.</p>
-						</div>	
-					</div>
-					<div class="cur">
-						<img src="img/data.png" alt="web" />
-						<div>
-							<p class="darkT big bold mont">데이터 분석</span></p>
-							<p class="darkT mid ligt pret">흥미로운 주제의 다양한 데이터들을 모아<br>데이터 시각화 및 분석을 합니다.</p>
-						</div>
+			<p class="darkT big regu mont" style="text-align:center; line-height: 3em;">
+				&lt;2년 연속 저현고등학교 우수 동아리 선정&gt;<br>
+				&lt;교내 유일 컴퓨터실 독점&gt;<br>
+				&lt;삼성 주니어 SW 아카데미 2년 연속 발탁&gt;<br>
+				&lt;Microsoft Azure Empowerment Project 선정&gt;<br>
+				&lt;비버 챌린지 시행 및 운영진 참여&gt;<br>
+				&lt;저현고등학교 최대 크기 및 유일 순수 공학 동아리&gt;
+			</p>
+			<p class="darkT bigl bold">. . .</p>
+			</br>
+			<p class="darkT bigl bold mont">이정도가 되시겠다~</p>
+		</div>
+		<div class="page curriculum1">
+			<p class="darkT bigl bold mont tacen">It is IT에서는<br>무엇을 배우나요?</p>
+			<p class="darkT mid pret tacen">크게 아래 내용으로 진행 됩니다.</p>
+			<div class="curs">
+				<div class="cur">
+					<img src="img/app.png" alt="web" />
+					<div>
+						<p class="darkT big bold mont">App 개발</span></p>
+						<p class="darkT mid ligt pret">앱을 만들 수 있는 Android Studio, React를 배우고<br>직접 개발합니다.</p>
 					</div>
 				</div>
-			</div>
-			<div class="page portfolio-t">
-				<p class="darkT bigl bold mont tacen">It is IT의<br>작년 활동이 궁금해요!</p>
-				<p class="darkT mid pret tacen">아래는 2023년 진행한 프로젝트입니다.</p>
-			</div>
-			<div class="page portfolio">
-				<div class="port-img port1">
-					<div class="port">
-						<p class="port-title mont mid bold">Mango</p>
-						<p class="port-content pret">저현고등학교 웹사이트</p>
-						<a class="port-link" target="_blank" href="https://drive.google.com/file/d/1dQLFoz8aflUjJFd2mhPsfvNEKoGLm8-X/view?usp=sharing">View</a>
+				<div class="cur">
+					<img src="img/www.png" alt="web" />
+					<div>
+						<p class="darkT big bold mont">WEB 개발</span></p>
+						<p class="darkT mid ligt pret">웹의 기본인 HTML과 CSS를 배우고<br>Figma를 이용해 UI 디자인을 합니다.</p>
 					</div>
 				</div>
-				<div class="port-img port2">
-					<div class="port">
-						<p class="port-title mont mid bold">Slime Story</p>
-						<p class="port-content pret">슬라임의 모험!</p>
-						<a class="port-link" target="_blank" href="https://youtu.be/HPFSFxngrrg">View</a>
+				<div class="cur">
+					<img src="img/unity.png" alt="web" />
+					<div>
+						<p class="darkT big bold mont">게임 개발</span></p>
+						<p class="darkT mid ligt pret">Unity를 배우고 스토리 구상으로<br>동아리 오리지널 게임을 개발합니다.</p>
 					</div>
 				</div>
-				<div class="port-img port3">
-					<div class="port">
-						<p class="port-title mont mid bold">데이터 분석</p>
-						<p class="port-content pret"></p>
-						<a class="port-link" target="_blank" href="https://drive.google.com/drive/folders/1zcnMVGmdtrMDEutmKJXBRLMu--A0m_JJ?usp=sharing">View</a>
+				<div class="cur">
+					<img src="img/data.png" alt="web" />
+					<div>
+						<p class="darkT big bold mont">데이터 분석</span></p>
+						<p class="darkT mid ligt pret">흥미로운 주제의 다양한 데이터들을 모아<br>데이터 시각화 및 분석을 합니다.</p>
 					</div>
 				</div>
-			</div>
-			<div class="page curriculum-t">
-				<p class="darkT bigl bold mont tacen">올해는 어떻게 진행하나요?</p>
-				<p class="darkT mid pret tacen">1학기 초에 간단한 프로젝트 탐색 활동 후<br>남은 차시 동안 "조별 프로젝트"를 진행합니다<br><br>총 10차시로 진행할 예정입니다.</p>
-			</div>
-			<div class="page curriculum">
-				<div class="curri-box-wrap">
-					<div class="curri-box">
-						<p class="darkT mid bold mont tacen">1차시: OT</p><br>
-						<h4 class="darkT smls pret tacen">OT를 진행합니다.<br><br>
-							선후배의 이름을 외우고 친목을 도모할 수 있는 자리입니다.</h4><br>
-					</div>
-					<div class="curri-box">
-						<p class="darkT mid bold mont tacen">2차치: 활동 탐구 1</p><br>
-						<h4 class="darkT smls pret tacen">작년 게임 분야 개발팀이 어떤 프로젝트를 진행했는지 소개합니다.<br>
-							또한, 유니티로 아주 간단한 게임을 직접 만들어보는 활동을 진행합니다.</h4><br>
-					</div>
-					<div class="curri-box">
-						<p class="darkT mid bold mont tacen">3차시: 활동 탐구 2</p><br>
-						<h4 class="darkT smls pret tacen">작년 웹 개발, 데이터 분석 분야 팀이 진행한 프로젝트를 소개합니다.<br>
-							또한, Square space를 이용한 간단한 웹페이지 만들기와 영화 평점 데이터 분석을 체험합니다.</h4><br>
-					</div>
-					<div class="curri-box">
-						<p class="darkT mid bold mont tacen">4차시: 주제 찾기 & 조 짜기</p><br>
-						<h4 class="darkT smls pret tacen">1학기 동안 진행할 프로젝트의 주제를 모색합니다.<br>
-							같이 프로젝트를 진행할 팀원 또한 구합니다.</h4><br>
-					</div>
-					<div class="curri-box">
-						<p class="darkT mid bold mont tacen">5~6차시: 조 별 공부</p><br>
-						<h4 class="darkT smls pret tacen">각 조가 진행할 프로젝트와 관련된 심화 공부를 합니다.</h4><br>
-					</div>
-					<div class="curri-box">
-						<p class="darkT mid bold mont tacen">7~9차시: 프로젝트 활동</p><br>
-						<h4 class="darkT smls pret tacen">조 별로 프로젝트를 진행합니다.</h4><br>
-					</div>
-					<div class="curri-box">
-						<p class="darkT mid bold mont tacen">10차시: 프로젝트 소개 & 학술제 준비</p><br>
-						<h4 class="darkT smls pret tacen">다른 팀이 만든 프로젝트에 대해 알아보고 개선할 점에 대하여 이야기를 나눕니다.</h4><br>
-					</div>
-				</div>
-			</div>
-			<div class="page application" id="apply">
-				<p class="darkT bigl bold mont tacen">지원은 어디서 하나요?</p>
-				<a href="https://forms.gle/czXNwXs6anGpLDTcA" target="_blank" class="aplic-link mid bold pret">지원하러 가기</a>
-			</div>
-			<div class="page contact darkB">
-				<p class="whiteT bigl bold mont tacen">Contact</p>
-				<a href="https://www.instagram.com/jeohyeon_itisit/" target="_blank" class="whiteT mid mont tacen"><i class="fa-brands fa-instagram"></i> @jeohyeon_itisit</a>
-				<a href="tel:01085979775" target="_blank" class="whiteT mid mont tacen"><i class="fa-solid fa-phone"></i> 010-8597-9775 (부장 김경래)</a>
-				<p class="whiteT pret smls tacen">경기도 고양시 일산동구 위시티 3로 37</p>
-				<p class="whiteT pret smls tacen">Copyright &copy; by It is IT All Right Reserved</p>
-			</div>
-			<div class="contact darkB">
-				<p class="whiteT pret smls tacen" style="font-size: 7px;text-align: left;">이 웹사이트의 아이콘 중 일부는 <a href="https://icons8.com/">icons8.com</a> 에서 가져왔습니다.</p>
 			</div>
 		</div>
+		<div class="page portfolio-t">
+			<p class="darkT bigl bold mont tacen">It is IT의<br>작년 활동이 궁금해요!</p>
+			<p class="darkT mid pret tacen">아래는 2023년 진행한 프로젝트입니다.</p>
+		</div>
+		<div class="page portfolio">
+			<div class="port-img port1">
+				<div class="port">
+					<p class="port-title mont mid bold">Mango</p>
+					<p class="port-content pret">저현고 학생을 위한 정보사이트</p>
+					<a class="port-link" target="_blank"
+						href="https://drive.google.com/file/d/1dQLFoz8aflUjJFd2mhPsfvNEKoGLm8-X/view?usp=sharing">View</a>
+				</div>
+			</div>
+			<div class="port-img port2">
+				<div class="port">
+					<p class="port-title mont mid bold">Slime Story</p>
+					<p class="port-content pret">It is IT 오리지널 게임</p>
+					<a class="port-link" target="_blank" href="https://youtu.be/HPFSFxngrrg">View</a>
+				</div>
+			</div>
+			<div class="port-img port3">
+				<div class="port">
+					<p class="port-title mont mid bold">저현고등학교 맞춤 데이터 분석</p>
+					<p class="port-content pret"></p>
+					<a class="port-link" target="_blank"
+						href="https://drive.google.com/drive/folders/1zcnMVGmdtrMDEutmKJXBRLMu--A0m_JJ?usp=sharing">View</a>
+				</div>
+			</div>
+		</div>
+		<div class="page curriculum-t">
+			<p class="darkT bigl bold mont tacen">올해는 어떻게 진행하나요?</p>
+			<p class="darkT mid pret tacen">1학기 초에 간단한 프로젝트 탐색 활동 후<br>남은 차시 동안 "조별 프로젝트"를 진행합니다<br><br>총 10차시로 진행할
+				예정입니다.</p>
+		</div>
+		<div class="page curriculum">
+			<div class="curri-box-wrap">
+				<div class="curri-box">
+					<p class="darkT mid bold mont tacen">1차시: OT</p><br>
+					<h4 class="darkT smls pret tacen">OT를 진행합니다.<br><br>
+						선후배의 이름을 외우고 친목을 도모할 수 있는 자리입니다.</h4><br>
+				</div>
+				<div class="curri-box">
+					<p class="darkT mid bold mont tacen">2차치: 활동 탐구 1</p><br>
+					<h4 class="darkT smls pret tacen">작년 게임 분야 개발팀이 어떤 프로젝트를 진행했는지 소개합니다.<br>
+						또한, 유니티로 아주 간단한 게임을 직접 만들어보는 활동을 진행합니다.</h4><br>
+				</div>
+				<div class="curri-box">
+					<p class="darkT mid bold mont tacen">3차시: 활동 탐구 2</p><br>
+					<h4 class="darkT smls pret tacen">작년 웹 개발, 데이터 분석 분야 팀이 진행한 프로젝트를 소개합니다.<br>
+						또한, Square space를 이용한 간단한 웹페이지 만들기와 영화 평점 데이터 분석을 체험합니다.</h4><br>
+				</div>
+				<div class="curri-box">
+					<p class="darkT mid bold mont tacen">4차시: 주제 찾기 & 조 짜기</p><br>
+					<h4 class="darkT smls pret tacen">1학기 동안 진행할 프로젝트의 주제를 모색합니다.<br>
+						같이 프로젝트를 진행할 팀원 또한 구합니다.</h4><br>
+				</div>
+				<div class="curri-box">
+					<p class="darkT mid bold mont tacen">5~6차시: 조 별 공부</p><br>
+					<h4 class="darkT smls pret tacen">각 조가 진행할 프로젝트와 관련된 심화 공부를 합니다.</h4><br>
+				</div>
+				<div class="curri-box">
+					<p class="darkT mid bold mont tacen">7~9차시: 프로젝트 활동</p><br>
+					<h4 class="darkT smls pret tacen">조 별로 프로젝트를 진행합니다.</h4><br>
+				</div>
+				<div class="curri-box">
+					<p class="darkT mid bold mont tacen">10차시: 프로젝트 소개 & 학술제 준비</p><br>
+					<h4 class="darkT smls pret tacen">다른 팀이 만든 프로젝트에 대해 알아보고 개선할 점에 대하여 이야기를 나눕니다.</h4><br>
+				</div>
+			</div>
+		</div>
+		<div class="page application" id="apply">
+			<p class="darkT bigl bold mont tacen">지원은 어디서 하나요?</p>
+			<a href="https://forms.gle/czXNwXs6anGpLDTcA" target="_blank" class="aplic-link mid bold pret">지원하러 가기</a>
+		</div>
+		<div class="page contact darkB">
+			<p class="whiteT bigl bold mont tacen">Contact</p>
+			<a href="https://www.instagram.com/jeohyeon_itisit/" target="_blank" class="whiteT mid mont tacen"><i
+					class="fa-brands fa-instagram"></i> @jeohyeon_itisit</a>
+			<a href="tel:01085979775" target="_blank" class="whiteT mid mont tacen"><i class="fa-solid fa-phone"></i>
+				010-8597-9775 (부장 김경래)</a>
+			<p class="whiteT pret smls tacen">경기도 고양시 일산동구 위시티 3로 37</p>
+			<p class="whiteT pret smls tacen">Copyright &copy; by It is IT All Right Reserved</p>
+		</div>
+		<div class="contact darkB">
+			<p class="whiteT pret smls tacen" style="font-size: 7px;text-align: left;">이 웹사이트의 아이콘 중 일부는 <a
+					href="https://icons8.com/">icons8.com</a> 에서 가져왔습니다.</p>
+		</div>
+	</div>
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
-		<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
-		<script src="main.js"></script>
-		<script>
-			// 로고 애니메이션 추가
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+	<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+	<script src="main.js"></script>
+	<script>
+		// 로고 애니메이션 추가
 
-			window.sr = ScrollReveal({ reset: true });
+		window.sr = ScrollReveal({ reset: true });
 
-			// sr.reveal(".page1", {
-			// 	origin: "top",
-			// 	duration: 500,
-			// 	distance: "200px",
-			// });
+		// sr.reveal(".page1", {
+		// 	origin: "top",
+		// 	duration: 500,
+		// 	distance: "200px",
+		// });
 
-			sr.reveal(".logo-img", {
-				origin: "top",
-				duration: 500,
-				distance: "200px",
-			});
+		sr.reveal(".logo-img", {
+			origin: "top",
+			duration: 500,
+			distance: "200px",
+		});
 
-			sr.reveal(".logo", {
-				origin: "right",
-				duration: 500,
-				distance: "200px",
-			});
+		sr.reveal(".logo", {
+			origin: "right",
+			duration: 500,
+			distance: "200px",
+		});
 
-			sr.reveal(".logo-des", {
-				origin: "bottom",
-				duration: 500,
-				distance: "200px",
-			});
-			
-			// It has been a hard day
-		</script>
-	</body>
+		sr.reveal(".logo-des", {
+			origin: "bottom",
+			duration: 500,
+			distance: "200px",
+		});
+
+		// It has been a hard day
+	</script>
+</body>
+
 </html>
