--- a/index.html
+++ b/index.html
@@ -37,21 +37,20 @@
 		</div>
 		<div class="page">
 			<div class="PR-title" style="width: 100%; display: flex; flex-direction: row;">
-				<p class="PR1 big mont">동아리</p>
+				<p class="PR1 bigl mont">동아리</p>
 				<p class="darkT bigl bold mont">'자랑'</p>
-				<p class="PR2 big mont">이라면</p>
+				<p class="PR2 bigl mont">이라면</p>
 			</div>
-			<p class="darkT big regu mont" style="text-align:center; line-height: 3em;">
-				&lt;2년 연속 저현고등학교 우수 동아리 선정&gt;<br>
-				&lt;교내 유일 컴퓨터실 독점&gt;<br>
-				&lt;삼성 주니어 SW 아카데미 2년 연속 발탁&gt;<br>
+			<p class="darkT mid regu mont" style="text-align:center; line-height: 3em;">
+				&lt;2년 연속 저현고등학교 '우수 동아리' 선정&gt;<br>
+				&lt;교내 유일 '컴퓨터실 독점'&gt;<br>
+				&lt;삼성 주니어 SW 아카데미 '2년 연속' 발탁&gt;<br>
 				&lt;Microsoft Azure Empowerment Project 선정&gt;<br>
-				&lt;비버 챌린지 시행 및 운영진 참여&gt;<br>
-				&lt;저현고등학교 최대 크기 및 유일 순수 공학 동아리&gt;
+				&lt;'비버 챌린지' 시행 및 운영진 참여&gt;<br>
+				&lt;저현고등학교 '최대 크기 및 유일' 순수 공학 동아리&gt;<br>
+				...
 			</p>
-			<p class="darkT bigl bold">. . .</p>
-			</br>
-			<p class="darkT bigl bold mont">이정도가 되시겠다~</p>
+			<p class="darkT big bold mont">이정도가 되시겠다~</p>
 		</div>
 		<div class="page curriculum1">
 			<p class="darkT bigl bold mont tacen">It is IT에서는<br>무엇을 배우나요?</p>
