이지석멍청이

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 			</div>
 			<div class="port-img port3">
 				<div class="port">
-					<p class="port-title mont mid bold">저현고등학교 맞춤 데이터 분석</p>
-					<p class="port-content pret"></p>
+					<p class="port-title mont mid bold">데이터 분석</p>
+					<p class="port-content pret">저현고등학교 맞춤 데이터 분석</p>
 					<a class="port-link" target="_blank"
 						href="https://drive.google.com/drive/folders/1zcnMVGmdtrMDEutmKJXBRLMu--A0m_JJ?usp=sharing">View</a>
 				</div>
