--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 		</div>
 		<div class="page application" id="apply">
 			<p class="darkT bigl bold mont tacen">지원은 어디서 하나요?</p>
-			<a href="https://forms.gle/czXNwXs6anGpLDTcA" target="_blank" class="aplic-link mid bold pret">지원하러 가기</a>
+			<a href="https://forms.gle/czXNwXs6anGpLDTcA" target="_blank" class="aplic-link mid bold pret">지원하러 가기<br>(반드시 학교계정으로 로그인 해 주세요!)</a>
 		</div>
 		<div class="page contact darkB">
 			<p class="whiteT bigl bold mont tacen">Contact</p>
