Web 개발 쪽 메시지 수정

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <img src="img/www.png" alt="웹 개발 아이콘" />
                     <div>
                         <p class="darkT big bold mont">WEB 개발</p>
-                        <p class="darkT mid ligt pret">웹의 기본인 HTML과 CSS를 배우고<br>Figma를 이용해 UI 디자인을 합니다.</p>
+                        <p class="darkT mid ligt pret">HTML과 CSS를 배우고<br>Figma를 통해 UI/UX 디자인을 합니다.</p>
                     </div>
                 </div>
                 
